--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jft-Gy-9x9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Ei1-to-oX9">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -213,12 +213,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hlp-m7-Eqb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="969.375" y="-775.35211267605632"/>
+            <point key="canvasLocation" x="379" y="-781"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="GZELoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="GZELoginViewController" customModule="Gooze" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="GZELoginViewController" customModule="Gooze" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Dlw-mc-1b0"/>
                         <viewControllerLayoutGuide type="bottom" id="x5G-qV-cTP"/>
@@ -369,6 +369,71 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2040" y="-780.63380281690138"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="k9w-Ln-Ufy">
+            <objects>
+                <viewController storyboardIdentifier="GZELoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Ei1-to-oX9" customClass="GZELoginViewController" customModule="Gooze" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PWB-GB-0lz"/>
+                        <viewControllerLayoutGuide type="bottom" id="siz-hL-6sZ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Xsm-cK-fLq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main-background" translatesAutoresizingMaskIntoConstraints="NO" id="FD9-M8-vKk">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aPd-bt-XyP">
+                                <rect key="frame" x="96.5" y="57" width="128" height="170"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gooze-logo-1" translatesAutoresizingMaskIntoConstraints="NO" id="b7L-a7-Ca8">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="100"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" image="gooze-text" translatesAutoresizingMaskIntoConstraints="NO" id="5Rn-eU-9kk">
+                                        <rect key="frame" x="0.0" y="100" width="128" height="50"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="5Rn-eU-9kk" secondAttribute="bottom" constant="20" id="CgJ-mu-sbN"/>
+                                    <constraint firstItem="b7L-a7-Ca8" firstAttribute="top" secondItem="aPd-bt-XyP" secondAttribute="top" id="NDt-ZS-OPq"/>
+                                    <constraint firstItem="5Rn-eU-9kk" firstAttribute="leading" secondItem="aPd-bt-XyP" secondAttribute="leading" id="Ult-i8-DNm"/>
+                                    <constraint firstItem="5Rn-eU-9kk" firstAttribute="top" secondItem="b7L-a7-Ca8" secondAttribute="bottom" id="X8y-6o-Bcz"/>
+                                    <constraint firstAttribute="trailing" secondItem="b7L-a7-Ca8" secondAttribute="trailing" id="jXp-hT-XmR"/>
+                                    <constraint firstItem="b7L-a7-Ca8" firstAttribute="leading" secondItem="aPd-bt-XyP" secondAttribute="leading" id="pWZ-Wd-c37"/>
+                                    <constraint firstAttribute="trailing" secondItem="5Rn-eU-9kk" secondAttribute="trailing" id="vW9-CQ-psq"/>
+                                </constraints>
+                            </view>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9e2-Dw-qta" customClass="GZEDoubleCtrlView" customModule="Gooze" customModuleProvider="target">
+                                <rect key="frame" x="16" y="284" width="288" height="284"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aPd-bt-XyP" firstAttribute="centerY" secondItem="Xsm-cK-fLq" secondAttribute="centerY" multiplier="0.5" id="ATi-TO-Q7V"/>
+                            <constraint firstItem="siz-hL-6sZ" firstAttribute="top" secondItem="9e2-Dw-qta" secondAttribute="bottom" id="DXh-YJ-sSe"/>
+                            <constraint firstItem="FD9-M8-vKk" firstAttribute="leading" secondItem="Xsm-cK-fLq" secondAttribute="leading" id="V4Y-Td-1OY"/>
+                            <constraint firstItem="aPd-bt-XyP" firstAttribute="centerX" secondItem="Xsm-cK-fLq" secondAttribute="centerX" id="cyY-Tx-5MF"/>
+                            <constraint firstItem="aPd-bt-XyP" firstAttribute="height" secondItem="Xsm-cK-fLq" secondAttribute="height" multiplier="0.3" id="dKn-cK-FZA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9e2-Dw-qta" secondAttribute="trailing" id="dUF-05-tAS"/>
+                            <constraint firstAttribute="trailing" secondItem="FD9-M8-vKk" secondAttribute="trailing" id="mG6-FB-WsE"/>
+                            <constraint firstItem="aPd-bt-XyP" firstAttribute="width" secondItem="Xsm-cK-fLq" secondAttribute="width" multiplier="0.4" id="rDI-XA-byW"/>
+                            <constraint firstAttribute="bottom" secondItem="FD9-M8-vKk" secondAttribute="bottom" id="siL-4B-jKH"/>
+                            <constraint firstItem="9e2-Dw-qta" firstAttribute="height" secondItem="Xsm-cK-fLq" secondAttribute="height" multiplier="0.5" id="uWl-qS-ecE"/>
+                            <constraint firstItem="FD9-M8-vKk" firstAttribute="top" secondItem="Xsm-cK-fLq" secondAttribute="top" id="usd-AV-5aT"/>
+                            <constraint firstItem="9e2-Dw-qta" firstAttribute="leading" secondItem="Xsm-cK-fLq" secondAttribute="leadingMargin" id="wNR-hV-07D"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="doubleCtrlView" destination="9e2-Dw-qta" id="CE5-kS-pX1"/>
+                        <segue destination="cxv-R3-Bhb" kind="show" identifier="registerCodeSegue" id="mYB-Wd-Tvt"/>
+                        <segue destination="S19-gD-Gha" kind="show" identifier="signUpSegue" id="akO-BX-PMh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fr8-dw-dfU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1301" y="-781"/>
         </scene>
         <!--Sign Up Basic View Controller-->
         <scene sceneID="mEI-cf-gKh">
@@ -1083,7 +1148,8 @@
         <image name="pin-w-shadow" width="95" height="86"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="vVb-3U-XOw"/>
+        <segue reference="akO-BX-PMh"/>
+        <segue reference="mYB-Wd-Tvt"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
